WIP: fix moog endpoints